--- a/theme/index.html
+++ b/theme/index.html
@@ -20,6 +20,7 @@
   <link href='https://www.google-analytics.com' rel='preconnect'>
   <link href='https://www.googleadservices.com' rel='preconnect'>
   <link href='https://www.googletagmanager.com' rel='preconnect'>
+  <script type="text/javascript" src="//cdn.evgnet.com/beacon/demo/tevergagestore/scripts/evergage.min.js"></script>
   <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', function() {
